--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,44 +1,52 @@
-disabled_rules: # rule identifiers to exclude from running
+disabled_rules:
   - colon
   - comma
   - control_statement
-opt_in_rules: # some rules are only opt-in
+  - trailing_whitespace
+
+opt_in_rules:
   - empty_count
-  # Find all the available rules by running:
-  # swiftlint rules
-excluded: # paths to ignore during linting. Takes precedence over `included`.
+
+excluded:
   - Carthage
   - Pods
 
-# configurable rules can be customized from this configuration file
-# binary rules can set their severity level
-force_cast: warning # implicitly
+force_cast: warning
+
 force_try:
-  severity: warning # explicitly
-# rules that have both warning and error levels, can set just the warning level
-# implicitly
-line_length: 200
-# they can set both implicitly with an array
+  severity: warning
+
+line_length: 300
+
 type_body_length:
-  - 300 # warning
-  - 400 # error
-# or they can set both explicitly
+  - 300
+  - 400
+
 file_length:
   warning: 500
   error: 1200
-# naming rules can set warnings/errors for min_length and max_length
-# additionally they can set excluded names
+
 type_name:
-  min_length: 4 # only warning
-  max_length: # warning and error
+  min_length: 3
+  max_length:
     warning: 40
     error: 50
-  excluded: iPhone # excluded via string
+  excluded: iPhone
+
 identifier_name:
-  min_length: # only min_length
-    error: 4 # only error
-  excluded: # excluded via string array
+  min_length:
+    error: 4
+  excluded:
     - id
     - URL
     - GlobalAPIKey
-reporter: "xcode" # reporter type (xcode, json, csv, checkstyle, junit, html, emoji)
+reporter: "xcode"
+
+identifier_name:
+    allowed_symbols: "_"
+    min_length: 2
+    max_length:
+        warning: 90
+        error: 1000
+    excluded:
+        - id
