--- a/synchronoss.xcodeproj/xcshareddata/xcschemes/synchronoss.xcscheme
+++ b/synchronoss.xcodeproj/xcshareddata/xcschemes/synchronoss.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A0A5006520765CE800FB6C24"
+            BuildableName = "synchronoss.app"
+            BlueprintName = "synchronoss"
+            ReferencedContainer = "container:synchronoss.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -100,7 +110,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "adhoc"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
