--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ before_install:
 install:
 - bundle install
 script:
-- xcodebuild -workspace synchronoss.xcworkspace -list
-- xcodebuild -workspace synchronoss.xcworkspace -scheme synchronoss -sdk iphonesimulator
-  -enableCodeCoverage YES -destination 'platform=iOS Simulator,name=iPhone 6,OS=11.3'
-  GCC_GENERATE_TEST_COVERAGE_FILES=YES build test
+# - xcodebuild -workspace synchronoss.xcworkspace -list
+# - xcodebuild -workspace synchronoss.xcworkspace -scheme synchronoss -sdk iphonesimulator
+#   -enableCodeCoverage YES -destination 'platform=iOS Simulator,name=iPhone 6,OS=11.3'
+#   GCC_GENERATE_TEST_COVERAGE_FILES=YES build test
 - fastlane adhoc
 after_success:
 - bash <(curl -s https://codecov.io/bash)
